--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
     "url": "https://github.com/holidaypirates/frontend-assessment-test/issues"
   },
   "devDependencies": {
-    "@babel/core": "^7.6.4",
+    "@babel/core": "^7.7.2",
     "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-    "@babel/preset-env": "^7.6.3",
+    "@babel/preset-env": "^7.7.1",
+    "@babel/preset-react": "^7.7.0",
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.0.4",
@@ -41,6 +42,8 @@
   "dependencies": {
     "@babel/polyfill": "^7.6.0",
     "axios": "^0.19.0",
-    "core-js": "^3.3.3"
+    "core-js": "^3.3.3",
+    "react": "^16.11.0",
+    "react-dom": "^16.11.0"
   }
 }
