--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "axios": "^0.19.0",
     "core-js": "^3.3.3",
     "react": "^16.11.0",
-    "react-dom": "^16.11.0"
+    "react-dom": "^16.11.0",
+    "react-slick": "^0.25.2",
+    "slick-carousel": "^1.8.1"
   }
 }
