--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@babel/polyfill": "^7.6.0",
     "axios": "^0.19.0",
     "core-js": "^3.3.3",
+    "query-string": "^6.9.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-slick": "^0.25.2",
